--- a/css/d-c-s.css
+++ b/css/d-c-s.css
@@ -1125,13 +1125,14 @@ a {
     .bottom-home .text {
         display: flex;
         flex-direction: column;
-        align-items: end;
+        align-items: center;
         justify-content: start;
         margin-right: 10px;
         margin-bottom: 10px;
 
 
     }
+
 
 
 
